# sql-on-kv

./: .gitignore  MODULE.bazel  README.md
src/cli/: BUILD.bazel  main.cc
src/cli/repl/: BUILD.bazel  result.cc  result.hh  runner.cc  runner.hh
src/kv/: connection.cc  connection.hh
src/kv/ids/: snowflake_generator.cc  snowflake_generator.hh  threadsafe_snowflake_generator.cc  threadsafe_snowflake_generator.hh
src/kv/internal/: network_thread.cc  network_thread.hh  serde.hh  setup.cc  setup.hh  tuple.cc  tuple.hh
src/kv/internal/fdb/: key_value_array.cc  key_value_array.hh  string_view_array.hh
src/kv/internal/fdb/raii/: future.cc  future.hh  key_value.cc  key_value.hh  key_value_array.cc  key_value_array.hh  string_view_array.cc  string_view_array.hh  transaction.cc  transaction.hh
src/kv/internal/table/: definition.hh
src/kv/internal/table/result/: row.cc  row.hh  set.cc  set.hh  value.hh
src/lib/: BUILD.bazel  flags.hh
src/sql/: BUILD.bazel  lexer.cc  lexer.hh  parser.cc  parser.hh
src/sql/lexer/: BUILD.bazel  lexer.cc  lexer.hh  token.cc  token.hh
src/sql/lexer/internal/: charset.cc  charset.hh  consumer.cc  consumer.hh  state.cc  state.hh
src/sql/parser/: BUILD.bazel  parser.cc  parser.hh  statement.cc  statement.hh  type.hh
src/sql/parser/internal/: reader.cc  reader.hh  state.cc  state.hh  statement_parser.cc  statement_parser.hh
src/sql/parser/internal/where/: parser.cc  parser.hh  shunt.cc  shunt.hh
test/: BUILD
test/lexer/: BUILD  lexer.cc
test/parser/: BUILD  sql.cc
