cc_library(
  name = "parser",
  srcs = glob(["*.cc", "internal/*.cc"]),
  hdrs = glob(["*.hh", "internal/*.hh"]),
  includes = ["."],
  copts = ["-std=c++20"],
  strip_include_prefix = "/src",
  visibility = ["//visibility:public"],
  deps = [
    "@abseil-cpp//absl/log",
    "@abseil-cpp//absl/log:check",
    "//src/sql/lexer",
  ],
)